--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       POSTGRES_HOST: ${DB_HOST:-localhost}
     volumes:
       - /var/lib/postgresql/data
+    network_mode: "host"
   web:
     container_name: engweb_web
     env_file: .env.dev
@@ -18,7 +19,7 @@ services:
       MIX_ENV: ${MIX_ENV:-dev}
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     depends_on:
       - db
     volumes:
@@ -26,3 +27,4 @@ services:
       - /app/_build
       - /app/deps
       - /app/priv/static/uploads
+    network_mode: "host"
